--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,11 +18,12 @@
 </head>
 <body>
 <div id="app">
-    <h1 id="title">All Pods in Service</h1>
+    <h1 id="title">All Pods in Application Map</h1>
     <div class="wrapper" v-for="server in serverList">
         <div class="server" v-bind:style="{ background: server.color }">
             <p class="hostname">{{ server.hostname }}</p>
             <p class="server-status">{{ server.status }}</p>
+            <p class="nodename">running on {{ server.nodename }}</p>
         </div>
     </div>
 </div>
