--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -7,48 +7,82 @@ html, body {
     text-align: center;
     background-color: #00530f;
     color: white;
-    margin: 10px;
-    height: 80px;
-    line-height: 80px;
+    /*height: 50px;*/
+    /*line-height: 50px;*/
+    border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 30px;
+    padding: 5px;
+}
+
+.node-wrapper {
     border-radius: 5px;
 }
 
-.wrapper {
-    float: left;
-    position: relative;
-    background-color: black;
-    margin: 10px;
-    width: 300px;
-    height: 300px;
-    word-wrap: break-word;
-    border-radius: 18px;
+.node-name {
+    text-align: center;
+    font-size: 20px;
+    background-color: skyblue;
+    /*border-left: 1px solid black;*/
+    /*border-right: 1px solid black;*/
+    /*border-top: 1px solid black;*/
+    border: 3px solid black;
+    border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.server {
-    position: absolute;
-    width: 90%;
-    height: 90%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.node {
+    width: 100%;
+    /*height: 500px;*/
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    border-bottom: 3px solid black;
+}
+
+.pod {
+    position: relative;
+    float: left;
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    margin: 5px;
     text-align: center;
-    font-size: 30px;
     box-sizing: border-box;
-    padding: 10px;
+    /*padding: 5px;*/
     border-radius: 10px;
+    border: 1px solid #ccc;
 }
 .hostname {
-    height: 40%;
+    height: 30%;
     margin: 0;
     box-sizing: border-box;
     cursor: pointer;
+    font-size: 15px;
+    font-weight: 600;
+    padding: 10px;
 }
 
-.server-status {
+.pod-status {
     display: inline-block;
-    padding: 10px;
+    position: absolute;
+    padding: 5px 15px 5px 15px;
     background: white;
-    margin: 0;
+    margin: 5px;
+    font-size: 15px;
     border-radius: 5px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.resource {
+    position: absolute;
+    bottom: 10px;
+    font-size: 12px;
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
+    width: 100%;
+    text-align: center;
 }
 
