--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -25,6 +25,7 @@ html, body {
 }
 
 .node-name {
+    width: 100%;
     text-align: center;
     font-size: 20px;
     background-color: #131313;
@@ -75,6 +76,44 @@ html, body {
     border-bottom: 1px ;
 }
 
+.slide-frame {
+    width: 100px;
+    height: 40px;
+    position: relative;
+    text-align: center;
+    line-height: 40px;
+    overflow: hidden;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.slide-box {
+    position: relative;
+    width: 200px;
+    height: 40px;
+    transition: all 0.3s;
+}
+
+.slide-left {
+    float: left;
+    width: 100px;
+    height: 40px;
+    background-color: #1e1e1e;
+}
+
+.slide-right {
+    display: inline-block;
+    width: 100px;
+    height: 40px;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+}
+
+.moveLeft {
+    transform: translateX(-100px);
+}
+
 .pod-status {
     display: inline-block;
     /*position: absolute;*/
@@ -96,8 +135,4 @@ html, body {
     /*transform: translateX(-50%);*/
     width: 100%;
     text-align: center;
-}
-
-.test {
-    color: limegreen;
 }
