--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,11 +31,13 @@
             <div class="node-name">
                 {{ node }}
             </div>
-            <!--<div class="pod" v-for="pod in podList" v-if="node == 'minikube'" v-bind:style="{ background: pod.color }">-->
-            <div class="pod" v-for="pod in podList" v-if="node == 'minikube'">
-                <div class="hostname" v-on:click="deletePod">{{ pod.hostname }}</div>
-                <div class="pod-status">
-                    {{ pod.status }}
+            <div class="pod" v-for="(pod, index) in podList" v-if="node == 'minikube'">
+                <div class="hostname" ref="hostname" v-on:click="deletePod">{{ pod.hostname }}</div>
+                <div class="slide-frame" v-on:mouseenter="setIndex(index)" v-on:mouseleave="reSetIndex">
+                    <div class="slide-box" v-bind:class="{moveLeft: podIndex == index}">
+                        <div class="slide-left">{{ pod.status }}</div>
+                        <div class="slide-right" v-on:click="deletePod">Delete</div>
+                    </div>
                 </div>
                 <div class="resource">CPU: <span v-if="pod.cpu">{{ pod.cpu }}</span><span v-else="pod.cpu">N/A</span>
                     | Mem: <span v-if="pod.memory">{{ pod.memory }}</span><span v-else="pod.memory">N/A</span>
