--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -3,79 +3,69 @@ html, body {
     margin: 0;
     background-color: #333;
 }
-
 #nav-bar {
     background-color: #111111;
     height: 50px;
     padding: 10px 20px;
 }
-
 #cocktail-logo {
     float: left;
     color: aquamarine;
-
 }
-
 #namu-logo {
     float: right;
 }
-
 .node-wrapper {
     border-radius: 5px;
+    margin-top: 10px;
 }
-
 .node-name {
     width: 100%;
     text-align: center;
     font-size: 20px;
     background-color: #131313;
     color: white;
-    /*border-left: 1px solid black;*/
-    /*border-right: 1px solid black;*/
-    /*border-top: 1px solid black;*/
-    /*border: 3px solid black;*/
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-    /*border-radius: 5px;*/
-    margin-top: 10px;
-    margin-bottom: 5px;
+    /*box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);*/
+    /*margin-top: 10px;*/
+    margin-bottom: 10px;
 }
-
 .node {
     width: 100%;
-    /*height: 500px;*/
-    border-left: 3px solid black;
-    border-right: 3px solid black;
-    border-bottom: 3px solid black;
+    height:100%;
+    border: 1px solid #131313;
+    padding: 10px;
 }
-
 .pod {
     position: relative;
     float: left;
     display: inline-block;
     width: 160px;
     height: 160px;
-    margin: 5px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     text-align: center;
-    box-sizing: border-box;
     padding: 5px;
     border-radius: 2px;
     background-color: #131313;
     color: white;
-    /*border: 1px solid #555555;*/
-    /*box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);*/
+    border-width: 1px;
+    border-style: solid;
+    border-color: gray;
+
+}
+.pod:hover {
+    border: 1px solid cyan;
 }
 .hostname {
     height: 40%;
     margin-bottom: 10px;
     box-sizing: border-box;
-    cursor: pointer;
     font-size: 15px;
     font-weight: 600;
     padding: 5px;
     background-color: #1e1e1e;
     border-bottom: 1px ;
 }
-
 .slide-frame {
     width: 100px;
     height: 40px;
@@ -85,22 +75,20 @@ html, body {
     overflow: hidden;
     left: 50%;
     transform: translateX(-50%);
+    cursor: pointer;
 }
-
 .slide-box {
     position: relative;
     width: 200px;
     height: 40px;
-    transition: all 0.3s;
+    transition: all 0.2s;
 }
-
 .slide-left {
     float: left;
     width: 100px;
     height: 40px;
     background-color: #1e1e1e;
 }
-
 .slide-right {
     display: inline-block;
     width: 100px;
@@ -109,23 +97,15 @@ html, body {
     color: black;
     font-weight: bold;
 }
-
 .moveLeft {
     transform: translateX(-100px);
 }
-
 .pod-status {
     display: inline-block;
-    /*position: absolute;*/
     padding: 5px 15px;
-    /*height: 50px;*/
     background: #1e1e1e;
     margin: 5px;
     font-size: 15px;
-    /*border-radius: 5px;*/
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*transform: translate(-50%, -50%);*/
 }
 .resource {
     position: absolute;
@@ -135,4 +115,7 @@ html, body {
     /*transform: translateX(-50%);*/
     width: 100%;
     text-align: center;
+}
+.terminating {
+    background-color: #ff7500;
 }
