--- a/src/static/css/custom.css
+++ b/src/static/css/custom.css
@@ -45,16 +45,13 @@ html, body {
     margin-right: 10px;
     text-align: center;
     padding: 5px;
-    border-radius: 2px;
+    /*border-radius: 2px;*/
     background-color: #131313;
     color: white;
-    border-width: 1px;
+    border-width: 3px;
     border-style: solid;
     border-color: gray;
 
-}
-.pod:hover {
-    border: 1px solid cyan;
 }
 .hostname {
     height: 40%;
